# onomatico

./: README.md  aws_instance.tf  pyproject.toml  setup_instance.sh  sweep.yaml
data/: README.md  names.csv  names_reverse.csv  split_data.py  training.csv  validation.csv
deployment/: aws_instance.tf  setup_instance.sh
onomatico/: Transformer.py  main.py
onomatico/utils/: Names.py  Transformer.py
