[tool.poetry]
name = "onomatico"
version = "0.0.0" # Overwritten by dynamic-versioning plugin see https://pypi.org/project/poetry-dynamic-versioning/
description = "Python packaging examples with poetry"
authors = ["Manuel Pasieka <contact@manuelpasieka.com>"]
license = "MIT"
readme = "README.md"
homepage = "www.manuelpasieka.com"

packages = [
    { include = "onomatico" }
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
typer = "^0.4.1"
torch = "^1.11.0"
torchtext = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
metadata = true
tagged-metadata = true
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = [
    "onomatico/__init__.py"
]

[tool.poetry.scripts]
onomatico = "onomatico.main:main"